# codex

./: .gitignore  Cargo.toml  codex-analyis-of-aoc2022.codex  codex-analyis-of-by-address.codex  codex-analyis-of-jonla.codex  codex-analyis-of-nes.codex  codex-analyis-of-roll-rs.codex  codex-analyis-of-rusttracer.codex  test.html
code-exploration-services/: Cargo.toml
code-exploration-services-lib/: Cargo.toml  grammar.schema.json  theme.schema.json
code-exploration-services-lib/src/: build.rs  lib.rs  parse.rs  tests.rs
code-exploration-services-lib/src/analysis/: dir.rs  field.rs  file.rs  mod.rs
code-exploration-services-lib/src/input/: mod.rs
code-exploration-services-lib/src/input/subsystems/: mod.rs
code-exploration-services-lib/src/input/subsystems/ctags/: mod.rs  tags.rs  xref_kinds.rs  xrefs.rs
code-exploration-services-lib/src/input/subsystems/custom/: mod.rs
code-exploration-services-lib/src/input/subsystems/custom/agda/: mod.rs
code-exploration-services-lib/src/input/subsystems/elaine/: mod.rs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/: .gitignore  README.md  Thesis.code-workspace  design_space.md  elab2.md  implicit_elaboration.md
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/elaine/: CHANGELOG.md  cabal.project  elaine.cabal
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/elaine/app/: Main.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/elaine/examples/: _elab1.elaine  _imports.elaine  _local_reader.elaine  _multi_implicit.elaine  _structured_logging_generic.elaine  _subjump.elaine  abort.elaine  basics.elaine  id.elaine  implicit.elaine  logic.elaine  logic_once.elaine  safe_division.elaine  square_is_even.elaine  state.elaine  structured_logging.elaine  val.elaine
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/elaine/src/Elaine/: AST.hs  Eval.hs  Exec.hs  Ident.hs  Parse.hs  Pretty.hs  Std.hs  Transform.hs  TypeCheck.hs  TypeVar.hs  Types.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/elaine/test/: Examples.hs  Main.hs  TypeCheck.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/hefty-algebras/: hefty-algebras.cabal
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/hefty-algebras/app/: Main.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/hefty-algebras/src/: Elab.hs  Hefty.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/hefty-algebras/src/Examples/: LambdaState.hs  StateCatch.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/hefty-algebras/src/Hefty/: Except.hs  Lambda.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/hefty-algebras/src/Hefty/Lambda/: CBN.hs  CBV.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/koka/: exception.kk  exception2.kk  localreader.kk  localreader2.kk  logic.kk
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/lambda/: Main.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/lang/: LICENSE  lang.cabal
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/lang/app/: AST.hs  Effen.hs  Main.hs  Sugar.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/lang/test/: Main.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/mini-eff/: CHANGELOG.md  mini-eff.cabal
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/experiments/mini-eff/app/: Main.hs
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/first_stage_review/: bibliography.bib  first.tex  preamble.tex
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/meeting notes/: 2023-01-12.md  2023-02-10.md  2023-04-11.md  2023-05-23.md  2023-05-30.md
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/spec/: spec.tex
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/thesis/: .latexmkrc  bibliography.bib  document.sty  index.tex  mscthesis.sty  watch.sh
code-exploration-services-lib/src/input/subsystems/elaine/elaine-repo/thesis/chapters/: background.tex  basics.tex  conclusion.tex  elaboration_compilation.tex  elaboration_resolution.tex  introduction.tex  metadata.tex  preface.tex  related_work.tex  spec.tex
code-exploration-services-lib/src/input/subsystems/lsp/: lsp_communication.rs  lsp_messages.rs  mod.rs
code-exploration-services-lib/src/input/subsystems/rustdoc/: mod.rs
code-exploration-services-lib/src/input/subsystems/textmate/: mod.rs
code-exploration-services-lib/src/languages/: mod.rs
code-exploration-services-lib/src/output/: mod.rs  scope_selector.rs  theme.rs  tokenize.rs
code-exploration-services-lib/src/output/latex/: codex.sty  colors.rs  mod.rs
code-exploration-services-lib/src/output/simple_html/: generate_html.rs  mod.rs  outline.rs  script.js  style.css  themes.rs
code-exploration-services-lib/src/sources/: dir.rs  hash.rs  mod.rs  span.rs
code-exploration-services-lib/src/textmate/: mod.rs
code-exploration-services-lib/src/textmate/grammar/: constructor.rs  mod.rs  name.rs  parser.rs
code-exploration-services-lib/src/textmate/theme/: constructor.rs  mod.rs
code-exploration-services-tests/: Cargo.toml
examples/: .gitignore  small.rs  test.rs  unicode.rs
lines-inclusive/: Cargo.toml
raproxy/: Cargo.toml  mylsp.json
sources/: Cargo.toml
sources/src/: dir.rs  dir_entry.rs  file.rs  lib.rs  macros.rs  path.rs  root.rs  span.rs
textmate/: Cargo.toml  build.rs
textmate_grammars/: css.tmLanguage.xml  haskell.tmLanguage.xml  html.tmLanguage.json  json.tmLanguage.xml
textmate_themes/: 3024-day.tmTheme  Fluidvision.tmTheme  GitHub.tmTheme  cobalt.tmTheme  github-light.tmTheme  one-dark.tmTheme  solarized-dark.tmTheme  solarized-light.tmTheme
(+6 files in other folders)
