[package]
name = "code-exploration-services-lib"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axohtml = "0.4.1"
html = "0.1.1"
serde = {workspace=true}
serde_json = "1.0.94"
tree-sitter = "0.20.9"
thiserror = {workspace=true}
once_cell = "1.17.1"
dashmap = "5.4.0"
itertools = {workspace=true}
strum = {version="0.24.1", features=["derive"]}
typed-arena = "2.0.2"
regex = "1.7.1"
tracing = {workspace=true}
uuid = {version="1.3.1", features=["v4"]}
lsp-types = "0.94.0"
serde_yaml = {version="0.9.19"}
plist-rs = {version="0.1.0"}
regress = "0.4.1"
onig = "6.4.0"
lines-inclusive = {version="0.1.0", path="../lines-inclusive"}
fs_extra = "1.3.0"
sha1 = "0.10.5"
tempdir = "0.3.7"
walkdir = "2.3.3"
hex = "0.4.3"
crossbeam = "0.8.2"
convert_case = "0.6.0"
pathdiff = "0.2.1"
snailquote = "0.3.1"

[dev-dependencies]
code-exploration-services-tests = {path="../code-exploration-services-tests"}

[build-dependencies]
cc="1.0.79"
convert_case = "0.6.0"
typify = {version="0.0.10", features=[]}
schemars = "0.8.12"
serde_json = "1.0.94"
