[package]
name = "textmate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

code-exploration-services-language-configs = {path="../code-exploration-services-language-configs"}

[build-dependencies]